updated firebase api key

--- a/GoDeliverFrontEnd/src/app/header/header.component.html
+++ b/GoDeliverFrontEnd/src/app/header/header.component.html
@@ -1,15 +1,17 @@
 <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-  </head>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+</head>
 <header>
   <nav class="navbar navbar-expand-sm navbar-dark">
 
-    <a class="navbar-brand ml-5 col-xs-8 p-1" routerLink="">
-      <img src="assets/books.ico" alt="logo" style="width:40px;">
-    </a>
+    <div class="navbar-brand ml-5 col-xs-8 p-1">
+      <a routerLink="">
+        <img src="assets/books.ico" alt="logo" style="width:40px;">
+      </a>
+    </div>
 
 
     <ul class="navbar-nav" style="padding-right: 70px; padding-left:100px">
