--- a/GoDeliverFrontEnd/src/app/cart/cart.component.html
+++ b/GoDeliverFrontEnd/src/app/cart/cart.component.html
@@ -5,6 +5,8 @@
           <th>Product Name</th>
           <th>Product Price</th>
           <th>Product Image</th>
+          <th></th>
+          <th>Qty.</th>
         </tr>
       </thead>
   
@@ -17,6 +19,12 @@
             <h4>{{item.cost}}</h4>
           </td>
           <td><img src={{item.poster}} width="100" height="100" /></td>
+          <td><span class="btn btn-default btn-md btn-qty" (click)="decrementQuantity(item)">
+            <span class="glyphicon glyphicon-minus" aria-hidden="true"></span>
+          </span><span class="btn btn-default btn-md btn-qty" (click)="incrementQuantity(item)">
+            <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
+          </span></td>
+        <td>{{item.quantity}}</td>
           <td><button (click)="deleteItem($event,item)" class="btn btn-xs btn-danger">Remove Product</button></td>
         </tr>
   
