userprofile, cart and wishlist updated

--- a/GoDeliverFrontEnd/src/app/header/header.component.html
+++ b/GoDeliverFrontEnd/src/app/header/header.component.html
@@ -24,7 +24,7 @@
       <div *ngIf=curuser style="padding-top: 10px;">
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
-            {{ curuser[0] }}
+            {{ curUser }}
           </a>
 
           <div class="dropdown-menu ">
