edited userprofile page, wishlist, cart

--- a/GoDeliverFrontEnd/src/app/header/header.component.html
+++ b/GoDeliverFrontEnd/src/app/header/header.component.html
@@ -21,7 +21,7 @@
         </li>
       </div>
 
-      <div *ngIf=curuser style="padding-top: 10px;">
+      <div *ngIf=curUser style="padding-top: 10px;">
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
             {{ curUser }}
