--- a/GoDeliverFrontEnd/src/app/registration/registration.component.html
+++ b/GoDeliverFrontEnd/src/app/registration/registration.component.html
@@ -17,7 +17,7 @@
       </mat-form-field>
 
       <mat-form-field>
-        <input matInput placeholder="Enter your email" [formControl]="email"  name="userEmail" required [pattern]="emailPattern">
+        <input matInput placeholder="Enter your email" formControlName="userEmail"  name="userEmail" required>
         <mat-error *ngIf="email.invalid">{{getErrorMessage()}}</mat-error>
         <mat-hint> eg:abc@gmail.com</mat-hint>
       </mat-form-field>
@@ -41,8 +41,7 @@
       </mat-form-field>
 
       <button class="register" mat-raised-button style="color:rgb(240, 232, 232);background-color:grey">Register</button>
-      <div *ngIf="error" class="alert alert-danger">{{error}}</div>
-
+      
     </form>
   </div>
 </div>
