--- a/GoDeliverFrontEnd/src/app/admin/admin.component.html
+++ b/GoDeliverFrontEnd/src/app/admin/admin.component.html
@@ -1,3 +1,4 @@
+
 <!-- Login Page authentication with username and password -->
 <div class="conatiner">
 
@@ -41,10 +42,8 @@
             <br><br>
             <div *ngIf="error" class="alert alert-danger">{{error}}</div>
             <!-- Routing to signup page when the user clicks on the Signup button-->
-            <a class="register" [routerLink]="['/register']" style="color:rgb(12, 5, 5)">New to GoDeliver? Sign Up!
-            </a>
-            <a class="admin" [routerLink]="['/admin']" style="color:rgb(12, 5, 5)">Admin login
-            </a>
+            <!-- <a class="register" [routerLink]="['/register']" style="color:rgb(12, 5, 5)">New to GoDeliver? Sign Up!
+         -->
           </form>
           <!--  end of form class-->
         </div>
