--- a/GoDeliverFrontEnd/src/app/cards/cards.component.html
+++ b/GoDeliverFrontEnd/src/app/cards/cards.component.html
@@ -1,22 +1,34 @@
 <!-- cards to display books -->
 <mat-card class="book-card mt-3 mb-3">
-  <img mat-card-image src="{{ book.poster }}" style="height: 200px; background-size: cover;" alt="Photo of a {{book.title}}">
-  <mat-card-header>
+  <img mat-card-image src="{{ book.poster }}" style="height: 300px; background-size: cover;" alt="Photo of a {{book.title}}"
+    routerLink="book/{{ book.bookISBN_10 }}">
+  <mat-card-header routerLink="book/{{ book.bookISBN_10 }}">
     <span class="spacer"></span>
     <div *ngIf=email>
       <mat-icon class="example-icon">
         <a (click)="addToWishlist(book)">favorite</a>
       </mat-icon>
     </div>
-    <mat-card-title height="10px">
-      <h6>{{ (book.title.length>30)? (book.title | slice:0:30)+'..':(book.title) }}</h6>
+    <mat-card-title height="10px" class="title">
+      <h4 class="titl">{{ (book.title.length>30)? (book.title | slice:0:30)+'..':(book.title) }}</h4>
     </mat-card-title>
     <mat-card-subtitle>{{book.genre}}</mat-card-subtitle>
-    <mat-card-subtitle>Rs {{book.cost}}</mat-card-subtitle>
+    <mat-card-subtitle>₹ {{book.cost}}</mat-card-subtitle>
   </mat-card-header>
   <mat-card-actions>
-    <span class="spacer"></span>
-    <button (click)="addToCart(book)" mat-button>Add to cart</button>
-    <button routerLink="book/{{ book.bookISBN_10 }}" mat-button>Details</button>
+    <button (click)="addToCart(book)" class="_button _butbg _svgicon">
+      <svg class="_3oJBMI" width="16" height="16" viewBox="0 0 16 15" xmlns="http://www.w3.org/2000/svg">
+        <path class="" d="M15.32 2.405H4.887C3 2.405 2.46.805 2.46.805L2.257.21C2.208.085 2.083 0 1.946 0H.336C.1 0-.064.24.024.46l.644 1.945L3.11 9.767c.047.137.175.23.32.23h8.418l-.493 1.958H3.768l.002.003c-.017 0-.033-.003-.05-.003-1.06 0-1.92.86-1.92 1.92s.86 1.92 1.92 1.92c.99 0 1.805-.75 1.91-1.712l5.55.076c.12.922.91 1.636 1.867 1.636 1.04 0 1.885-.844 1.885-1.885 0-.866-.584-1.593-1.38-1.814l2.423-8.832c.12-.433-.206-.86-.655-.86"
+          fill="#fff"></path>
+
+      </svg>
+      Quick Add</button>
+      <a *ngIf="like" (click)="colorChange()" class="material-icons fav">favorite_border</a>
+      <img *ngIf="!like" (click)="colorChange()" class="fav" src="https://png.icons8.com/color/50/000000/hearts.png" width=10% height=10%>
+      <div *ngIf="!like">
+        <a (click)="addToWishlist()"></a>
+  </div>
+  <div *ngIf="like"><a (click)="removeFromWishlist($event,book)"></a></div>
+   
   </mat-card-actions>
 </mat-card>
