--- a/GoDeliverFrontEnd/src/app/book/book.component.html
+++ b/GoDeliverFrontEnd/src/app/book/book.component.html
@@ -52,7 +52,7 @@
 
           <div class="row">
             <div class="col-md-12">
-              <h2 class="product-price">{{ book.cost }}</h2>
+              <h2 class="product-price">₹ {{ book.cost }}</h2>
             </div>
           </div>
           <!-- end row -->
