made changes to navbar

--- a/GoDeliverFrontEnd/src/app/header/header.component.css
+++ b/GoDeliverFrontEnd/src/app/header/header.component.css
@@ -12,7 +12,8 @@
   padding: 0 20px 0 0;
 }
 nav .navbar-nav li a {
-  color:black !important;
+  color:white !important;
   font-weight: 900;
   padding-left: 15px;
 }
+
