--- a/GoDeliverFrontEnd/src/app/header/header.component.html
+++ b/GoDeliverFrontEnd/src/app/header/header.component.html
@@ -5,51 +5,55 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
 <header>
-  <nav class="navbar navbar-expand-sm navbar-dark">
+  <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
 
     <div class="navbar-brand ml-5 col-xs-8 p-1">
       <a routerLink="">
         <img src="assets/books.ico" alt="logo" style="width:40px;">
       </a>
     </div>
+    <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarNav">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav" >
+     
+      <ul class="navbar-nav" style="padding-right: 70px; padding-left:100px">
+        <div *ngIf=noUser style="padding-top: 10px;">
+          <li class="nav-item">
+            <a class="nav-link" routerLink="/login" href="#">Login</a>
+          </li>
+        </div>
 
+        <div *ngIf=curUser style="padding-top: 10px;">
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
+              {{ curUser }}
+            </a>
 
-    <ul class="navbar-nav" style="padding-right: 70px; padding-left:100px">
-      <div *ngIf=noUser style="padding-top: 10px;">
-        <li class="nav-item">
-          <a class="nav-link" routerLink="/login" href="#">Login</a>
-        </li>
-      </div>
+            <div class="dropdown-menu ">
+              <a class="dropdown-item " routerLink="/profile" href="#">User Profile</a>
+              <a class="dropdown-item " routerLink="/wishlist" href="#">Wishlist</a>
+              <a class="dropdown-item " routerLink="/orders">Orders</a>
+              <a class="dropdown-item " (click)="logout()">Logout</a>
+            </div>
+          </li>
 
-      <div *ngIf=curUser style="padding-top: 10px;">
+        </div>
+
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
-            {{ curUser }}
+            More
           </a>
-
           <div class="dropdown-menu ">
-            <a class="dropdown-item " routerLink="/profile" href="#">User Profile</a>
-            <a class="dropdown-item " routerLink="/wishlist" href="#">Wishlist</a>
-            <a class="dropdown-item " routerLink="/orders">Orders</a>
-            <a class="dropdown-item " (click)="logout()">Logout</a>
+            <a class="dropdown-item" routerLink="/servicepage">24x7 Customer Care</a>
+            <a class="dropdown-item " routerLink="/return">Return Policy</a>
+            <a class="dropdown-item " routerLink="/about">About Us</a>
           </div>
         </li>
-
-      </div>
-
-      <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
-          More
-        </a>
-        <div class="dropdown-menu ">
-          <a class="dropdown-item" routerLink="/servicepage">24x7 Customer Care</a>
-          <a class="dropdown-item " routerLink="/return">Return Policy</a>
-          <a class="dropdown-item " routerLink="/about">About Us</a>
-        </div>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" routerLink="/cart">Cart</a>
-      </li>
-    </ul>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/cart">Cart</a>
+        </li>
+      </ul>
+    </div>
   </nav>
 </header>
