--- a/GoDeliverFrontEnd/src/app/registration/registration.component.css
+++ b/GoDeliverFrontEnd/src/app/registration/registration.component.css
@@ -232,17 +232,171 @@ label {
   margin-top: 20px;
 } */
 
+
+
+
+.example-full-width {
+  width: 550px;
+  
+}
+
 .example-form {
   position: relative;
-  min-width: 100px;
-  max-width: 200px;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+  text-decoration-color: antiquewhite;
+
 }
 
 .register {
-  position: relative;
-  top: 2%;
-  left: 20%;
+  margin: 0 auto;  
 }
+.reg {
+  clear:both;
+}
+
+.registercard{
+
+  text-align: center;
+  margin: 4% auto;
+  background-color: white;
+
+  padding: 2% 4%;
+  box-shadow: 0 19px 38px rgba(0,0,0,0.30), 0 15px 12px rgba(0,0,0,0.22);
+  border-radius: 5px;
+}
+
+
+  
+  
+
+
+/* button {
+  width: 149px;
+  height: 43px;
+  border: 1px solid #fff;
+  border-radius: 22px;
+
+ } */
+
+ .button {
+  border: 1px solid #fff;
+  border-radius: 12px;
+  background-color: grey;
+  color: #FFFFFF;
+  text-align: center;
+  font-size: 17px;
+  width: 90px;
+  height: 40px;
+  transition: all 0.5s;
+  cursor: pointer;
+}
+
+.button span {
+  cursor: pointer;
+  display: inline-block;
+  position: relative;
+  transition: 0.5s;
+}
+
+.button span:after {
+  content: '\00bb';
+  position: absolute;
+  opacity: 0;
+  top: 0;
+  right: -20px;
+  transition: 0.5s;
+}
+
+.button:hover span {
+  padding-right: 25px;
+}
+
+.button:hover span:after {
+  opacity: 1;
+  right: 0;
+}
+
+ .page-bg {
+  /* background-image : url("../../assets/1234.gif"); */
+  background-size: cover;
+  background-repeat: no-repeat;
+  opacity: 0.3;
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+}
+
+
+  mat-card{
+    height: 90px; 
+    padding:0px;
+
+  }
+img{
+    width: 120px;
+    height: 80px;
+    padding-right: 20px;
+    margin-left: 0px;
+  
+  }
+  mat-card-title{
+    padding:0;
+    font-size: 17px;
+  }
+  
+.cardss {
+  margin:20px;
+  justify-content: center;
+  float:left;
+}
+  
+  /* #card2{
+    background: url(https://image.ibb.co/dAAMEe/rooot123.jpg);
+    background-repeat: no-repeat;
+    background-size: 160px 100px;
+  }
+
+  #card3{
+    background: url(https://image.ibb.co/iPbicz/thenunnnn.jpg);
+    background-repeat: no-repeat;
+  }
+
+  
+  #card4{
+    background: url(https://image.ibb.co/jBP6xz/wwww_160x100.jpg);
+    background-repeat: no-repeat;
+  }
+  
+  
+  #card5{
+    background: url(https://image.ibb.co/jyc1fK/meghs.jpg);
+    background-repeat: no-repeat;
+  }
+  #card6{
+    background: url(https://image.ibb.co/mEFJSz/6666.jpg);
+    background-repeat: no-repeat;
+    background-size: 160px 100px;
+    background-position-x: 40%;
+  }
+  
+  #card7{
+    background: url(https://preview.ibb.co/fGjpZe/d3255.jpg);
+    background-repeat: no-repeat;
+    background-size: 160px 100px;
+  }
+ 
+  
+  #card8{
+    background: url(https://image.ibb.co/d0Cq7z/Virat_Kohli.jpg);
+    background-repeat: no-repeat;
+    background-size: 160px 100px;
+    background-position-x: 60%;
+  } */
+
+/* ::ng-deep .mat-list-option:first-child .mat-pseudo-checkbox{ display: none;} */
+
+
+  
