--- a/GoDeliverFrontEnd/src/app/cards/cards.component.html
+++ b/GoDeliverFrontEnd/src/app/cards/cards.component.html
@@ -19,7 +19,7 @@
       Quick Add</button>
     <span class="spacer"></span>
     <div *ngIf=email>
-      <div class="pull-center">
+      <div class="fav">
         <mat-icon class="example-icon">
           <a (click)="addToWishlist(book)"><img src={{heartImage}}> </a>
         </mat-icon>
