--- a/GoDeliverFrontEnd/src/app/login/login.component.html
+++ b/GoDeliverFrontEnd/src/app/login/login.component.html
@@ -2,7 +2,7 @@
 <div class="conatiner">
 
   <body>
-    <div class="background">
+    <div class="page-bg"></div>
       <div class="row mb-4 ml-1">
   
         <div class="col-sm-12">
@@ -46,7 +46,6 @@
           </form>
      
           <!--  end of form class-->
-        </div>
       </div>
     </div>
   </body>
