--- a/GoDeliverFrontEnd/src/app/billing/billing.component.html
+++ b/GoDeliverFrontEnd/src/app/billing/billing.component.html
@@ -3,8 +3,8 @@
     <div *ngIf="addressList">
       <h2 style="margin-left:10px">Delivery Details</h2>
       <div style="margin-left:20px;margin-right:10px" *ngFor="let address of addressList">
-        
-         <app-delivery-card [address]="address"></app-delivery-card>
+
+        <app-delivery-card [address]="address"></app-delivery-card>
 
       </div>
     </div>
@@ -41,16 +41,14 @@
             <input matInput placeholder="Enter City" [(ngModel)]="city" name="city" required>
           </mat-form-field>
           <div class="text-center">
-              <!-- (click)="getMovie(title)"  -->
-<<<<<<< HEAD
-            <button (click)="getLatLng(address)" type="submit" [disabled]="!myForm.form.valid" class="btn btn-primary" style="align-self: left">Submit</button>
-=======
-            <button (click)="getMovie(address)" type="submit" [disabled]="!myForm.form.valid" class="btn btn-primary" style="align-self: left">Submit</button>
->>>>>>> d7f99297282456e36ee073be446d7c66015415a7
+            <!-- (click)="getMovie(title)"  -->
+
+            <button (click)="getLatLng(address)" type="submit" [disabled]="!myForm.form.valid" class="btn btn-primary"
+              style="align-self: left">Submit</button>
           </div>
         </form>
 
-        
+
       </mat-expansion-panel>
       <mat-expansion-panel (opened)="panelOpenState = true" (closed)="panelOpenState = false">
       </mat-expansion-panel>
@@ -94,4 +92,4 @@
       </mat-card-content>
     </mat-card>
   </div>
-</div> 
+</div>
