--- a/GoDeliverFrontEnd/src/app/registration/registration.component.css
+++ b/GoDeliverFrontEnd/src/app/registration/registration.component.css
@@ -319,10 +319,9 @@ label {
 }
 
  .page-bg {
-  /* background-image : url("../../assets/1234.gif"); */
+   background-image : url("../../assets/1234.gif"); 
   background-size: cover;
   background-repeat: no-repeat;
-  opacity: 0.3;
   position: fixed;
   width: 100%;
   height: 100%;
