--- a/GoDeliverFrontEnd/src/app/billing/billing.component.html
+++ b/GoDeliverFrontEnd/src/app/billing/billing.component.html
@@ -13,13 +13,13 @@
       <mat-expansion-panel>
         <mat-expansion-panel-header style="background-color:deepskyblue;border-radius: 3px;height:20px">
           <mat-panel-title style="border-radius: 8px;height:40px;padding-top:8px;padding-left:20px;">
-            Add New Address
+            Add new address
           </mat-panel-title>
         </mat-expansion-panel-header>
         <form #myForm="ngForm" (ngSubmit)="onSubmit()">
 
           <mat-form-field class="example-full-width" style="margin-left:20px">
-            <input matInput placeholder="Full Name" [(ngModel)]="firstname" name="firstname" required>
+            <input matInput placeholder="Full name" [(ngModel)]="firstname" name="firstname" required>
           </mat-form-field>
 
           <mat-form-field style="margin-left:20px">
@@ -30,15 +30,15 @@
             </mat-error>
           </mat-form-field>
           <mat-form-field style="margin-left:20px">
-            <input matInput placeholder="Enter Email" [(ngModel)]="usermail" name="userEmail" required>
+            <input matInput placeholder="Enter email" [(ngModel)]="usermail" name="userEmail" required>
             <mat-error *ngIf="userEmail.hasError('email')&&!userEmail.hasError('required')">Enter a valid email</mat-error>
           </mat-form-field>
 
           <mat-form-field class="example-full-width" style="margin-left:20px">
-            <input matInput placeholder="Enter address" [(ngModel)]="address" name="address" required>
+            <input matInput placeholder="Enter your address" [(ngModel)]="address" name="address" required>
           </mat-form-field>
           <mat-form-field style="margin-left:20px">
-            <input matInput placeholder="Enter City" [(ngModel)]="city" name="city" required>
+            <input matInput placeholder="Enter your city" [(ngModel)]="city" name="city" required>
           </mat-form-field>
           <div class="text-center">
             <!-- (click)="getMovie(title)"  -->
@@ -81,10 +81,10 @@
             <hr>
             <tr>
               <td style="width: 400px">
-                <h5>Deliver Cahrges</h5>
+                <h5>Deliver Charges</h5>
               </td>
               <td>
-                <h5>FREE</h5>
+                <h5>Free</h5>
               </td>
             </tr>
           </thead>
