--- a/GoDeliverFrontEnd/src/app/delivery-card/delivery-card.component.html
+++ b/GoDeliverFrontEnd/src/app/delivery-card/delivery-card.component.html
@@ -20,10 +20,10 @@
         </mat-form-field>
      </div>
     <button (click)="orderDetails(address.address, address.phone, address.name, address.city, address.addLat, address.addLng)" [disabled]="!date"  type="submit" class="btn btn-block-sm text-white"
-      style="background-color:darkorange;width:130px;margin-left:30px; margin-bottom: 10px;">DELIVER
-      HERE
+      style="background-color:darkorange;width:130px;margin-left:30px; margin-bottom: 10px;">Deliver
+      Here
     </button>
     <button class="btn btn-block-sm" style="background-color:rgb(245, 236, 236);width:130px;margin-left:30px; margin-bottom: 10px;"
-      (click)="deleteAddress($event, address)">DELETE<i class="fa fa-trash pl-4"></i></button>
+      (click)="deleteAddress($event, address)">Delete<i class="fa fa-trash pl-4"></i></button>
     </div>
 </mat-card>
