--- a/GoDeliverFrontEnd/src/app/login/login.component.html
+++ b/GoDeliverFrontEnd/src/app/login/login.component.html
@@ -1,7 +1,7 @@
 <!-- Login Page authentication with username and password -->
 <div class="conatiner">
 
-  <body>
+  <body class="background">
     <div class="page-bg"></div>
       <div class="row mb-4 ml-1">
   
