--- a/GoDeliverFrontEnd/src/app/header/header.component.html
+++ b/GoDeliverFrontEnd/src/app/header/header.component.html
@@ -51,11 +51,11 @@
         </li>
         <div *ngIf=curUser style="padding-top:10px;">
           <li class="nav-item">
-            <a class="nav-link " routerLink="/wishlist" href="#">Wishlist</a>
+            <a class="nav-link " (click)="wishlistRoute()"  href="#">Wishlist</a>
           </li>
         </div>
         <li class="nav-item">
-          <a class="nav-link" routerLink="/cart">Cart</a>
+          <a class="nav-link" (click)="cartRoute()">Cart</a>
         </li>
       </ul>
     </div>
